--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-476.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-412.0KB/s(Youtube:不良林), server: 120.241.236.217, port: 16266, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.96MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.78MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇮🇳 印度-320.2KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.36MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.95MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.66MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.97MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇰🇷 韩国-793.0KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-3.28MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.09MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-362.4KB/s(Youtube:不良林), server: 120.241.236.217, port: 16266, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-4.10MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-320.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-320.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-320.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-320.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-320.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-320.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-412.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇮🇳 印度-320.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.95MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.97MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
