--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-793.0KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.30MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-2.78MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
   - {name: 🇸🇬 新加坡-3.28MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.09MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-362.4KB/s(Youtube:不良林), server: 120.241.236.217, port: 16266, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-18.33MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30010, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.52MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.42MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-793.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.42MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
