--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-476.6KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.70MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-356.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-362.4KB/s(Youtube:不良林), server: 120.241.236.217, port: 16266, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.76MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 卢森堡-202.6KB/s(Youtube:不良林), server: 91.243.81.248, port: 443, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-932.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-489.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.27MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 卢森堡-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 卢森堡-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 卢森堡-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 卢森堡-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 卢森堡-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 卢森堡-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-476.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.70MB/s(Youtube:不良林)
-      - 🇨🇳 中国-356.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-362.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 卢森堡-202.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
