--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 卢森堡-202.6KB/s(Youtube:不良林), server: 91.243.81.248, port: 443, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-932.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-489.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.27MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 未知国家-3.16MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-239.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-485.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-379.1KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-2.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇺🇸 美国-3.52MB/s(Youtube:不良林), server: 38.143.66.20, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-3.37MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-4.10MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 卢森堡-202.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 未知国家-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 卢森堡-202.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 未知国家-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 卢森堡-202.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 未知国家-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 卢森堡-202.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 未知国家-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 卢森堡-202.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 未知国家-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 卢森堡-202.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 未知国家-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 卢森堡-202.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-489.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.27MB/s(Youtube:不良林)
+      - 未知国家-3.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
+      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.10MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
