--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-932.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 未知国家-3.16MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇨🇳 中国-239.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-485.8KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇫🇷 法国-1.33MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-6.90MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.34MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.59MB/s(Youtube:不良林), server: sg-04.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-04.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-14.89MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30010, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇺🇸 美国-379.1KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.53MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-2.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 未知国家-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 未知国家-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 未知国家-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 未知国家-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 未知国家-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 未知国家-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-932.1KB/s(Youtube:不良林)
-      - 未知国家-3.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-485.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.90MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-379.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.53MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
